--- a/classes/Week 6.ipynb
+++ b/classes/Week 6.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1647,6 +1647,139 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>First-time Full-time Freshmen</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Students starting as STEM majors and who conti...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>STEM Programs - plan codes that may have been ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      First-time Full-time Freshmen  Unnamed: 1 Unnamed: 2  \\\n",
+       "0  Students starting as STEM majors and who conti...        NaN        NaN   \n",
+       "1                                                NaN        NaN        NaN   \n",
+       "2                                                NaN        NaN        NaN   \n",
+       "3  STEM Programs - plan codes that may have been ...        NaN        NaN   \n",
+       "4                                                NaN        NaN        NaN   \n",
+       "\n",
+       "  Unnamed: 3 Unnamed: 4  \n",
+       "0        NaN        NaN  \n",
+       "1        NaN        NaN  \n",
+       "2        NaN        NaN  \n",
+       "3        NaN        NaN  \n",
+       "4        NaN        NaN  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bookreq = pd.read_excel('../dataset/2008-2018 STEM discipline.xlsx', sheet_name=0)\n",
+    "bookreq.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'colnames' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-5aee4b58716b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbanner\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../dataset/2008-2018 STEM discipline.xlsx'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msheet_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcolnames\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mskiprows\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnrows\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m#ignore index means we re-number the rows.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mclasses\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mbanner2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mbanner3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mclasses\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'colnames' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "banner=pd.read_excel('../dataset/2008-2018 STEM discipline.xlsx', sheet_name=0, names=colnames,skiprows=range(100),nrows=10)\n",
+    "colnames=list(banner.columns)\n",
+    "print(colnames)\n",
+    "\n",
+    "banner2=pd.read_excel('../dataset/2008-2018 STEM discipline.xlsx',sheet_name=0, names=colnames,skiprows=range(10),rows=)\n",
+    "banner2\n",
+    "#ignore index means we re-number the rows.\n",
+    "classes=pd.concat([banner2,banner3],ignore_index=True)\n",
+    "classes"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2073,6 +2206,18 @@
     "#to identify individual families. \n",
     "nhis = pd.merge(nhis_person, nhis_family, on=['FMX', 'HHX', 'SRVY_YR'])\n",
     "nhis.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#when you have two different names for the columns in each data file and you want to merge on that attribute\n",
+    "nhis=pd.merge(nhis_person,nhis_family,\n",
+    "              rightfile=['FMX','HHX','SRVY_YR']\n",
+    "              leftfile=['FMX','HHX','SRVY_YR'])"
    ]
   },
   {
@@ -4893,6 +5038,7 @@
     }
    ],
    "source": [
+    "#staging a test dataset\n",
     "NA = np.nan\n",
     "data = [[10, 11, NA, 8],[5,4,5,8],[9,9,3,4], [NA, NA, NA, NA], [NA, 4, 5, 9]]\n",
     "dr = pd.DataFrame(data)\n",
@@ -5304,7 +5450,7 @@
     }
    ],
    "source": [
-    "#Use a dictionary to set different values per-column.\n",
+    "#Use a dictionary to set different values per-column.Makes a copy of the entire dataframe\n",
     "dr.fillna({0: 10, 2: 5})"
    ]
   },
