--- a/homework/Assignment 5.ipynb
+++ b/homework/Assignment 5.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have multiple files that need to be mereged. I might need to create new derived fields. The data that I want to work with have both the aggregate and separated by attribute parts. First I want to develop a step where I can connect the separatly registered data into the general aggregatte in order to look for a trend or a pattern that I can work with."
+    "I have some rows with no value. I might need to create new derived fields inorder to help me man"
    ]
   },
   {
@@ -32,45 +32,37 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\n",
-    "\t\t\t ---Retention ---\t\t\t --- within four years ---\t\t --- in fith year\t\t --- in sixth year ---\t\t --- in seventh year ---\t\t --- in eighth year ---\t\t --- in ninth year ---\t\t --- in tenth year ---\t\n",
-    "Fall= int (year)\t\n",
-    "Head count+ int\n",
-    "SAT average= int\n",
-    "---Retention ---\n",
-    "After one year= int\t\n",
-    "After two years= int\t\n",
-    "After three years= int\n",
-    " --- Graduation and Continuation ---\n",
-    " --- within four years\n",
-    "Graduated= int\n",
-    "Continued= int\t\n",
-    " --- in fith year---\n",
-    " Graduated= int\n",
-    "Continued= int\n",
-    "--- in sixth year ---\n",
-    "Graduated= int\n",
-    "Continued= int\n",
-    "\n",
-    "-- in seventh year ---\n",
-    "Graduated= int\n",
-    "Continued= int\n",
-    "\n",
-    " --- in eighth year ---\n",
-    " Graduated= int\n",
-    "Continued= int\n",
-    " \n",
-    " ---in ninth year ---\n",
-    " Graduated= int\n",
-    "Continued= int\n",
-    " \n",
-    " --- in tenth year ---\n",
-    " Graduated= int\n",
-    "Continued= int\n"
+    "Code= int\n",
+    "GENDER= str\n",
+    "ETHNICITY= str\n",
+    "FIRST_GEN= str\n",
+    "HOME_CITY= str\n",
+    "HOME_STATE= str\n",
+    "PELL_IND= str\n",
+    "TD_IND= str\n",
+    "FERPA_FLG= str\n",
+    "PRIMARY_PROGRAM= str\n",
+    "PRIM_PROG_DESCR= str\n",
+    "ACAD_PLAN1= str\n",
+    "ACAD_PLAN1_DESCR= str\n",
+    "ACAD_LEVEL= str\n",
+    "UNITS_TAKING= int\n",
+    "TOT_CUM_CREDITS= int\n",
+    "CUM_GPA\tSAT_SCORE= int\n",
+    "ACT_SCORE= int\n",
+    "HS_CONV_GPA= int\n",
+    "STEM_CRSE_COUNT_TERM= int\n",
+    "STEM_CRSE_COUNT_TOTAL= int\n",
+    "Exam One= int\n",
+    "Diagnostic Exam= int\n",
+    "First Module= int\n",
+    "Subject Enhancement Project= int\n",
+    "\n"
    ]
   },
   {
@@ -84,9 +76,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) I want to produce a graphic flow representation of the trend of Students progress from freshman to senior year whenever applicable.\n",
-    "2) Through the manipulation of this data, I would like to investigate if there is a pattern in the students progress based on their background. \n",
-    "3) Is there a similar pattern in the progressive years that is related to students of a certain group. Is it a year special event or it is a consistency?  "
+    "1) I want to predict the students out come by the end of the semester based on their first exam, diagnostic exam, and first module test results.\n",
+    "2) Through the manipulation of this data, I would like to investigate if there is a pattern in the students progress based on their background/ethnicity and being a first generation has effect on their perfomance. \n",
+    "3) I would like to investigate if the total amount of credit load they have and the acadamic plan has an influence on their progress in the class."
    ]
   },
   {
@@ -119,9 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.6.2'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import openpyxl\n",
     "openpyxl.__version__"
