--- a/homework/Assignment 5.ipynb
+++ b/homework/Assignment 5.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have some rows with no value. I might need to create new derived fields inorder to help me man"
+    "I have some rows with no value. I might need to create new derived fields inorder to help me manipulate the data in a way that makes sense to my evaluation or research questions. "
    ]
   },
   {
