--- a/homework/Assignment 6.ipynb
+++ b/homework/Assignment 6.ipynb
@@ -23,7 +23,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.read_excel('../dataset/CSC_poject.xlsx')"
+   ]
   },
   {
    "cell_type": "code",
@@ -50,7 +52,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "yes, I have taken the class and I do remember the basics\n",
+    "yes, I can articulate the null hypotheses (may be I might need to refine it after going over it with you)\n",
+    "I know the general assumptions of the T-test.\n",
+    "I do know what the p value represents.\n",
+    "yes, I know what sd is and how it is calcualted.\n"
+   ]
   },
   {
    "cell_type": "markdown",
