My final project.

--- a/homework/Assignment 6.ipynb
+++ b/homework/Assignment 6.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.read_excel('../dataset/CSC_poject.xlsx')"
+    "pd.read_excel('../dataset/CSC_project.xlsx')"
    ]
   },
   {
